src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>LG_AreaCode__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Asset)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ContractType__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EndNumber__c</fullName>
        <description>End Number of the Number Range</description>
        <label>End Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Entry_Format__c</fullName>
        <label>Entry Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Entry</fullName>
                </value>
                <value>
                    <fullName>Group Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_House_Number__c</fullName>
        <label>Premises</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IPAddress__c</fullName>
        <description>Network IP address for asset</description>
        <label>Network IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IP_Address_First_Part__c</fullName>
        <formula>VALUE(LEFT(LG_IPAddress__c,FIND(&quot;.&quot;,LG_IPAddress__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG IP Address First Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_IP_Address_Fourth_Part__c</fullName>
        <formula>VALUE(SUBSTITUTE(LG_IPAddress__c, TEXT(LG_IP_Address_First_Part__c)&amp; &quot;.&quot; &amp; TEXT(LG_IP_Address_Second_Part__c)&amp; &quot;.&quot; &amp; TEXT(LG_IP_Address_Third_Part__c)&amp;&quot;.&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG IP Address Fourth Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_IP_Address_Second_Part__c</fullName>
        <formula>VALUE(LEFT(RIGHT(LG_IPAddress__c,LEN(LG_IPAddress__c) - FIND(&quot;.&quot;,LG_IPAddress__c)),FIND(&quot;.&quot;,RIGHT(LG_IPAddress__c,LEN(LG_IPAddress__c) - FIND(&quot;.&quot;,LG_IPAddress__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG IP Address Second Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_IP_Address_Third_Part__c</fullName>
        <formula>VALUE(LEFT(SUBSTITUTE(LG_IPAddress__c, TEXT(LG_IP_Address_First_Part__c)&amp; &quot;.&quot; &amp; TEXT(LG_IP_Address_Second_Part__c)&amp;&quot;.&quot; , &quot;&quot;),FIND(&quot;.&quot;,SUBSTITUTE(LG_IPAddress__c, TEXT(LG_IP_Address_First_Part__c)&amp; &quot;.&quot; &amp; TEXT(LG_IP_Address_Second_Part__c)&amp;&quot;.&quot; , &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG IP Address Third Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, number is publicly listed in the phone directory</description>
        <label>In Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationAddress__c</fullName>
        <label>Installation Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_ListingType__c</fullName>
        <label>Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Listed and published (DE)</fullName>
                </value>
                <value>
                    <fullName>Listed but not published (DQR)</fullName>
                </value>
                <value>
                    <fullName>Ex-directory – number will not be published or given in search results (XD)</fullName>
                </value>
                <value>
                    <fullName>Not listed or published (NQR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>LG_Logistics_Reference_Number__c</fullName>
        <label>Logistics Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Logistics_Supplier_Name__c</fullName>
        <label>Logistics Supplier Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NumberActivationCeaseDate__c</fullName>
        <label>Date of Number Activation/Cease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Assets (Number Range Product Configuration)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Assets (Number Range Service)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeSize__c</fullName>
        <label>Number Range Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeType__c</fullName>
        <label>Number Range Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Portin</fullName>
                </value>
                <value>
                    <fullName>Port-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_NumberRange__c</fullName>
        <label>Number Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Number_Type__c</fullName>
        <label>Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main Entry</fullName>
                </value>
                <value>
                    <fullName>Sub Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInCity__c</fullName>
        <label>Port-In City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInHouseNumberExtension__c</fullName>
        <label>Port-In House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInHouseNumber__c</fullName>
        <label>Port-In House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInInitials__c</fullName>
        <label>Port-In Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInName__c</fullName>
        <label>Port-In Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInOperator__c</fullName>
        <label>Port-In Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInPrefix__c</fullName>
        <label>Port-In Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInStreet__c</fullName>
        <label>Port-In Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInType__c</fullName>
        <label>Port-In Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PortInWishDate__c</fullName>
        <label>Port-In Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PortInZipcode__c</fullName>
        <label>Port-In Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductGroup__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductVariant__c</fullName>
        <label>Product Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PublicListingAddress__c</fullName>
        <label>Thoroughfare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PublicListingCompanyName__c</fullName>
        <label>Public Listing Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PublicListingDescription__c</fullName>
        <label>Business Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PublicListingName__c</fullName>
        <description>Keeps the value of the phone directory name for the number.</description>
        <label>Public Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LG_Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning and tracking</description>
        <inlineHelpText>Indicates that the record is not relevant do to the change is active version (newer or older version exists and it is active)</inlineHelpText>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_StartNumber__c</fullName>
        <description>Starting Number of the Number Range</description>
        <label>Start Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubHeader__c</fullName>
        <label>Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TelephonyProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Telephony Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_TelephonyService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Telephony Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Assets (Telephony Service)</relationshipLabel>
        <relationshipName>LG_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Unpublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LG_Unpublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_AreaCode__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_AtkNrITEMNr__c</fullName>
        <label>Atk-Nr/ITEM-Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Business_Voice_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Voice Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Assets (Business Voice Service)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_CDRIDNumber__c</fullName>
        <label>CDR ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CustomerSiteID__c</fullName>
        <label>Customer Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_EndNumber__c</fullName>
        <label>End Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Historical_Name__c</fullName>
        <label>Historical Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>37th Lord of Brackley</fullName>
                </value>
                <value>
                    <fullName>Altgraf und Altgräfin</fullName>
                </value>
                <value>
                    <fullName>Altgräfin</fullName>
                </value>
                <value>
                    <fullName>Altgräfin und Altgraf</fullName>
                </value>
                <value>
                    <fullName>Baron</fullName>
                </value>
                <value>
                    <fullName>Baron und Baronin</fullName>
                </value>
                <value>
                    <fullName>Baronesse</fullName>
                </value>
                <value>
                    <fullName>Baronin</fullName>
                </value>
                <value>
                    <fullName>Baronin und Baron</fullName>
                </value>
                <value>
                    <fullName>Burggraf</fullName>
                </value>
                <value>
                    <fullName>Burggraf und Burggräfin</fullName>
                </value>
                <value>
                    <fullName>Burggräfin</fullName>
                </value>
                <value>
                    <fullName>Burggräfin und Burggraf</fullName>
                </value>
                <value>
                    <fullName>Comtesse</fullName>
                </value>
                <value>
                    <fullName>Earl</fullName>
                </value>
                <value>
                    <fullName>Edle</fullName>
                </value>
                <value>
                    <fullName>Edle und Edler</fullName>
                </value>
                <value>
                    <fullName>Edler</fullName>
                </value>
                <value>
                    <fullName>Edler und Edle</fullName>
                </value>
                <value>
                    <fullName>Erbgraf</fullName>
                </value>
                <value>
                    <fullName>Erbgraf und Erbgräfin</fullName>
                </value>
                <value>
                    <fullName>Erbgräfin</fullName>
                </value>
                <value>
                    <fullName>Erbgräfin und Erbgraf</fullName>
                </value>
                <value>
                    <fullName>Erbprinz</fullName>
                </value>
                <value>
                    <fullName>Erbprinz und Erbprinzessin</fullName>
                </value>
                <value>
                    <fullName>Erbprinzessin</fullName>
                </value>
                <value>
                    <fullName>Erbprinzessin und Erbprinz</fullName>
                </value>
                <value>
                    <fullName>Erzherzog</fullName>
                </value>
                <value>
                    <fullName>Erzherzog und Erzherzogin</fullName>
                </value>
                <value>
                    <fullName>Erzherzogin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_InstallationLocation__c</fullName>
        <label>Installation Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Number_Range_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Attribute</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Product_Configuration__c</fullName>
        <formula>CASESAFEID(UM_Number_Range_Attribute__r.cscfga__Product_Configuration__c)</formula>
        <label>Product Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_SecondMACAddress__c</fullName>
        <label>Second MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ShippingDate__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_StartNumber__c</fullName>
        <label>Start Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access point</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_vLANID__c</fullName>
        <label>vLAN-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Asset_Value__c</fullName>
        <description>Describes the asset in more detail</description>
        <inlineHelpText>Describes the asset in more detail</inlineHelpText>
        <label>Asset Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>csord__Order_Line_Item__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Service Line Item</label>
        <referenceTo>csord__Service_Line_Item__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Attribute_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Underlying attribute field</description>
        <inlineHelpText>Underlying attribute field</inlineHelpText>
        <label>Attribute Field</label>
        <referenceTo>cscfga__Attribute_Field__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Replacement Assets</relationshipLabel>
        <relationshipName>Replacement_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Replaced Assets</relationshipLabel>
        <relationshipName>Replaced_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>Number_Block</fullName>
        <active>true</active>
        <label>Number Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_Number</fullName>
        <active>true</active>
        <label>Phone Number</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>